docs/src/components/InstallationBlock.css
@layer components {
  .InstallationBlockTabsList {
    display: flex;
    gap: 1rem;
  }

  .InstallationBlockTab {
    font-size: var(--text-xs);
    line-height: var(--text-xs--line-height);
    letter-spacing: var(--text-xs--letter-spacing);
    cursor: default;
    position: relative;
    z-index: 0;
    outline: 0;

    @media (hover: hover) {
      &:hover {
        &::before {
          background-color: var(--color-gray-100);
        }
      }
    }

    &::before,
    &::after {
      content: '';
      position: absolute;
      z-index: -1;
    }

    &::before {
      inset: -0.125rem -0.375rem;
      border-radius: var(--radius-sm);
    }

    /* Increase the clickable size */
    &::after {
      inset: -0.375rem -0.5rem;
    }

    &[data-active] {
      color: var(--color-foreground);
      font-weight: bold;

      &::before {
        background-color: white;
        outline: 1px solid var(--color-gray-300);
        outline-offset: -1px;
        box-shadow:
          0 2px 3px -2px var(--color-gray-300),
          inset 0 -1px 1px var(--color-gray-200);
      }

      @media (prefers-color-scheme: dark) {
        &::before {
          outline: none;
          background-color: var(--color-gray-50);
          box-shadow:
            0 0 3px 0 var(--color-gray-300),
            inset 0 0 0 1px var(--color-gray-400);
        }
      }
    }

    &:focus-visible::before {
      outline: 2px solid var(--color-blue);
      outline-offset: -1px;
    }
  }
}

